# libusb-gadget

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac
cmake/: LIBUSBgadgetConfig.cmake.in  config.h.in
include/: Makefile.am
src/: .gitignore  Makefile.am  usb-gadget.c
tests/: CMakeLists.txt  Makefile.am  loopback.c
